.metadata/.plugins/org.eclipse.cdt.ui/clase_9.build.log
21:52:04 **** Incremental Build of configuration Debug for project clase_9 ****
make all 
Building file: ../src/main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c:1:1: error: unterminated comment
 /*Estructuras - Vector de tipo Estructura
 ^
src/subdir.mk:24: fallo en las instrucciones para el objetivo 'src/main.o'
make: *** [src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

21:52:04 Build Failed. 3 errors, 0 warnings. (took 319ms)

